<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitle="@string/cloud_quote"
        app:title="@string/cloudlibrary_name"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:id="@+id/cloudLogo"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:src="@drawable/cloud_library_logo"
            android:layout_height="100dp" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:text="@string/school_name"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/user"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:hint="@string/user_hint"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/pw"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:inputType="numberPassword"
                android:hint="@string/pw_hint"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:textAlignment="center"
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_radiius"
            android:text="@string/sign_btn"
            android:textColor="#fff"
            />


    </LinearLayout>
    <TextView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_gravity="bottom"
        android:text="@string/team_by"
        android:layout_height="wrap_content" />



</android.support.constraint.ConstraintLayout>