<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/lg_bg"
    android:gravity="bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:contentDescription="@string/nav_header_desc"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/logo" />
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:padding="3dp"
        android:background="@drawable/mini_radius"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title" />
    </LinearLayout>


</LinearLayout>
