<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/user"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/user_hint"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/pw"
            android:textSize="12sp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:inputType="numberPassword"
            android:hint="@string/pw_hint"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:textAlignment="center"
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/btn_radiius"
        android:text="@string/sign_btn"
        android:textColor="#fff"
        />

</LinearLayout>
