<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="图书馆一楼"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="@string/opentime_f1"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="图书馆二楼"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="@string/opentime_f2"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="图书馆四楼"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="@string/opentime_f4"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="敬梓楼西一楼"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:text="@string/opentime_jz"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>